fix: harmonize spacing at the end of forms

--- a/pro/src/styles/components/pages/Signin/_Signin.scss
+++ b/pro/src/styles/components/pages/Signin/_Signin.scss
@@ -51,7 +51,7 @@
   }
 
   .signin-form {
-    margin-bottom: rem(48px);
+    margin-bottom: rem(40px);
   }
 
   .buttons-field {
