--- a/pro/src/styles/components/pages/SignupForm/_SignupForm.scss
+++ b/pro/src/styles/components/pages/SignupForm/_SignupForm.scss
@@ -60,6 +60,10 @@
       margin-top: rem(40px);
     }
 
+    .sign-up-form {
+      margin: rem(16px) 0 rem(40px) 0;
+    }
+
     .buttons-field {
       display: flex;
       flex-wrap: wrap;
